<resources>
    <string name="app_name">Lab_08</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Morthy_Smith">Morthy Smith</string>
    <string name="morty_smith">Morty Smith</string>
    <string name="human_alive">Human - Alive</string>
    <string name="rick_sanchez">Rick Sanchez</string>
    <string name="image_of_morty"><![CDATA[Image of Morty<]]></string>
    <string name="image_of_rick">image of Rick</string>


    <string-array name="characters">
    <item>Morty Smith</item>
    <item>Rick Sanchez</item>


</resources>